--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://muhammed-rizwan-n.github.io/web",
+  "homepage": "https://isharenodes.github.io/isharenodes_web",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
